[tool.poetry]
name = "ml-regression-lab"
version = "0.1.0"
description = ""
authors = ["Cyrus.Tang <cyrus.tang@superoverflow.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.2"
plotly = "^5.16.1"
pandas = "^2.1.0"
nbformat = ">=4.2.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
